# FileOptWithWindow

./: .gitignore  Generate.bat  README.md
FileOp/: CMakeLists.txt  FileOp.sln
FileOp/FileOp/: CMakeLists.txt  FileOp.csproj  Form1.Designer.cs  Form1.cs  Program.cs
FileOp/FileOp/FileOptSystem/: FileSystem.cs
FileOp/FileOp/FileOptSystem/FileOp/: FileReader.cs  FileWriter.cs  WorkPool.cs  WorkThread.cs
FileOp/FileOp/FileOptSystem/FileOpt/: FileReader.cs
FileOp/FileOp/FileOptSystem/Singleton/: Singleton.cs
FileOp/FileOp/FileOptSystem/Thread/: ReadThread.cs  ThreadBase.cs  ThreadPool.cs  WorkThread.cs
FileOp/FileOp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
